--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Bootstrap 5</title>
+    <title>Universities</title>
 </head>
-<body class="salom">
+<body class="body">
     <table class="table table-hover container">
         <thead>
             <tr>
